--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "packageManager": "pnpm@10.10.0",
   "dependencies": {
     "basic-auth": "^2.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mysql2": "^3.14.1"
